--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Note Taker</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="icon" href="./assets/images/notebook_icon.svg">
   </head>
 
   <body>
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="/">Note Taker
+      <a class="navbar-brand" href="/">Express Notes
       </a>
     </nav>
     <div class="container">
